<resources>
    <string name="app_name">Kasitom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Kasitom</string>
    <string name="menu_tentang">About</string>
    <string name="antonim">Antonim</string>
    <string name="sinonim">Sinonim</string>
    <string name="chatglobal">Global Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_ubahBahasa">Change Languange</string>
    <string name="menu_logout">Log Out</string>
    <string name="soal">Latihan Soal</string>
    <string name="ketikdisini">Type Here...</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="OptionA">Option A</string>
    <string name="OptionB">Option B</string>
    <string name="OptionC">Option C</string>
    <string name="OptionD">Option D</string>
    <string name="fetchData">Mengambil data...</string>
    <string name="menu_papanSkor">Scoreboard</string>
    <string name="search">cari</string>
    <string name="saya">Saya</string>
    <string name="level1">Level 1</string>
    <string name="mulai">Mulai</string>
    <string name="level3">Level 3</string>
    <string name="level2">Level 2</string>
    <string name="level4">Level 4</string>
    <string name="level5">Level 5</string>
    <string name="level6">Level 6</string>
    <string name="level7">Level 7</string>


</resources>
