<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ubahBahasa"
            android:icon="@drawable/ic_settings_grey_24dp"
            android:title="@string/menu_ubahBahasa"/>
        <item
            android:id="@+id/nav_tentang"
            android:icon="@drawable/ic_person_grey_24dp"
            android:title="@string/menu_tentang" />
    </group>

        <item android:title="Kasitom">
            <menu>
                <item
                    android:id="@+id/nav_keluar"
                    android:icon="@drawable/ic_exit_to_app_grey_24dp"
                    android:title="@string/menu_logout" />

            </menu>
        </item>


</menu>
