<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.kasitom.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tentang"
        android:name="com.example.kasitom.ui.Tentang.TentangFragment"
        android:label="@string/menu_tentang"
        tools:layout="@layout/fragment_tentang" />

    <fragment
        android:id="@+id/nav_chatGlobal"
        android:name="com.example.kasitom.ui.chatGlobal.chatGlobalFragment"
        android:label="@string/menu_chatGlobal"
        tools:layout="@layout/fragment_chatGlobal" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.kasitom.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

</navigation>